--- a/approval-common/pom.xml
+++ b/approval-common/pom.xml
@@ -24,6 +24,10 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot</artifactId>
         </dependency>
