--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <version>3.5.3</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.sast</groupId>
+    <groupId>fun.sast</groupId>
     <artifactId>approval-system-backend</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
