验证码图片无redis

--- a/approval-server/pom.xml
+++ b/approval-server/pom.xml
@@ -48,6 +48,14 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.github.whvcse</groupId>
+            <artifactId>easy-captcha</artifactId>
+        <version>1.6.2</version>
+        </dependency>
+
+
+
     </dependencies>
 
     <build>
