feat:Implement Obtaining the required information form to be submitted

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <jjwt>0.9.1</jjwt>
         <mysql.version>8.0.33</mysql.version>
         <spotless.version>2.45.0</spotless.version>
+        <fastjson2.version>2.0.27</fastjson2.version>
     </properties>
 
 
@@ -48,7 +49,13 @@
             <dependency>
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
-                <version>3.5.12</version>
+                <version>${mybatis-plus.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-extension</artifactId>
+                <version>${mybatis-plus.version}</version>
+                <scope>compile</scope>
             </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
@@ -62,12 +69,10 @@
                 <optional>true</optional>
                 <version>${lombok.version}</version>
             </dependency>
-
             <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-test</artifactId>
-                <version>${spring-boot.version}</version>
-                <scope>test</scope>
+                <groupId>com.alibaba.fastjson2</groupId>
+                <artifactId>fastjson2</artifactId>
+                <version>${fastjson2.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
