feat:Implement registration function fix:jwtUtil

--- a/approval-common/pom.xml
+++ b/approval-common/pom.xml
@@ -43,6 +43,13 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
     </dependency>
+                <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.11.0</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
