--- a/approval-common/pom.xml
+++ b/approval-common/pom.xml
@@ -48,6 +48,12 @@
             <artifactId>java-jwt</artifactId>
             <version>3.11.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.aliyun.oss</groupId>
+            <artifactId>aliyun-sdk-oss</artifactId>
+            <version>3.17.4</version>
+            <scope>compile</scope>
+        </dependency>
 
 
     </dependencies>
