--- a/approval-pojo/pom.xml
+++ b/approval-pojo/pom.xml
@@ -26,6 +26,12 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-annotation</artifactId>
+            <version>3.5.12</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
