--- a/approval-server/src/main/resources/application-dev.yml
+++ b/approval-server/src/main/resources/application-dev.yml
@@ -1,12 +1,27 @@
+
 jwt:
-  secret: jwt  #JWT密钥
-  expiration: 864000000             #JWT过期时间（1000天）
+  secret: jwt  # JWT密钥
+  expiration: 864000000             # JWT过期时间（毫秒）
+
+#spring:
+ # datasource:
+  #  url: jdbc:mysql://47.97.252.72:3307/review?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowMultiQueries=true&serverTimezone=Hongkong&allowPublicKeyRetrieval=true
+   # username: sast
+    #password: sast_forever
 
 spring:
-   datasource:
-      url:
-      username:
-      password:
-#   redis:
-#     host: 127.0.0.1
-#     port: 6379
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/review
+    username: root
+    password: 111111
+
+  data:
+    redis:
+      host: 127.0.0.1
+      port: 6379
+
+
+
+server:
+  port: 9090
